Darkmode has been fixed on each pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="theme-dark" lang="en">
+<html class="theme-light" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0"
@@ -7,11 +7,11 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>WildCoin</title>
 
+    <link href="assets/css/variables.css" rel="stylesheet"/>
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/variables.homepage.css" rel="stylesheet"/>
     <link href="assets/css/homepage.css" rel="stylesheet"/>
 </head>
 <body>
@@ -24,8 +24,8 @@
           <label class="theme-switch" for="checkbox">
             <input type="checkbox" id="checkbox" />
             <span class="slider round">
-              <img class="" id="moon" src="assets/img/307307.svg" alt="">
-              <img class="" id="sun" src="assets/img/sun--v2.png" alt="">
+              <img id="moon" src="assets/img/307307.svg" alt="">
+              <img id="sun" src="assets/img/sun--v2.png" alt="">
             </span>
           </label>
         </div>
@@ -212,5 +212,6 @@
     ></script>
     <!-- <script src="./assets/js/darkmode.js"></script> -->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/darkmode.js"></script>
 </body>
 </html>
