--- a/src/ratings.html
+++ b/src/ratings.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="theme-light" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../assets/css/variables.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../assets/css/ratings.css" />
    
     
@@ -31,8 +32,8 @@
         <label class="theme-switch" for="checkbox">
           <input type="checkbox" id="checkbox" />
           <span class="slider round">
-            <img class="" id="moon" src="assets/img/307307.svg" alt="">
-            <img class="" id="sun" src="assets/img/sun--v2.png" alt="">
+            <img id="moon" src="../assets/img/307307.svg" alt="">
+            <img id="sun" src="../assets/img/sun--v2.png" alt="">
           </span>
         </label>
       </div>
@@ -232,5 +233,6 @@
       src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
       data-auto-replace-svg="nest"
     ></script>
+    <script src="../assets/js/darkmode.js"></script>
   </body>
 </html>
