--- a/src/team.html
+++ b/src/team.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="theme-light" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WildCoin</title>
+    <link href="../assets/css/variables.css" rel="stylesheet"/>
     <link href="../assets/css/team.css" rel="stylesheet">
-    <link href="assets/style.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
@@ -19,8 +19,8 @@
       <label class="theme-switch" for="checkbox">
         <input type="checkbox" id="checkbox" />
         <span class="slider round">
-          <img class="" id="moon" src="assets/img/307307.svg" alt="">
-          <img class="" id="sun" src="assets/img/sun--v2.png" alt="">
+          <img id="moon" src="../assets/img/307307.svg" alt="">
+          <img id="sun" src="../assets/img/sun--v2.png" alt="">
         </span>
       </label>
     </div>
@@ -106,5 +106,6 @@
     <script src="../assets/js/items.js"></script>
     <script src="../assets/js/team.js"></script>
     <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/darkmode.js"></script>
   </body>
 </html>
