Contact us page has been created

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet"/>
     <link href="assets/css/homepage.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="assets/css/contactez-nous.css">
 </head>
 <body>
     <header>
@@ -175,7 +176,7 @@
         <div class="footer-content">
             <ul class="footer-contact">
                 <li class="footer-contact-item">
-                    <a href="">
+                    <a href="/src/contactez-nous.html">
                         Contactez-nous
                     </a>
                 </li>
@@ -198,7 +199,6 @@
     </footer>
 
     <script src="assets/js/variables.homepage.js"></script>
-    <script src="assets/js/homepage.js"></script>
     <!-- Carousel scripts -->
     <!--    <script src="assets/js/carousel/carousel.homepage.js"></script>-->
     <script src="assets/js/carousel.homepage.js"></script>
