--- a/src/ratings.html
+++ b/src/ratings.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/contactez-nous.css">
     <title>Document</title>
   </head>
 
@@ -206,7 +207,7 @@
       <div class="footer-content">
           <ul class="footer-contact"> 
               <li class="footer-contact-item">
-                  <a href="">
+                  <a href="contactez-nous.html">
                     Contactez-nous
                   </a>
               </li>
