--- a/src/team.html
+++ b/src/team.html
@@ -8,6 +8,7 @@
     <link href="../assets/css/variables.css" rel="stylesheet"/>
     <link href="../assets/css/team.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/contactez-nous.css">
 </head>
 <body>
   <header>
@@ -80,7 +81,7 @@
         <div class="footer-content">
             <ul class="footer-contact"> 
                 <li class="footer-contact-item">
-                    <a href="">
+                    <a href="contactez-nous.html">
                       Contactez-nous
                     </a>
                 </li>
