Contact us page has been created

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet"/>
     <link href="assets/css/homepage.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="assets/css/contactez-nous.css">
 </head>
 <body>
     <header>
@@ -176,7 +175,7 @@
         <div class="footer-content">
             <ul class="footer-contact">
                 <li class="footer-contact-item">
-                    <a href="/src/contactez-nous.html">
+                    <a href="src/contactez-nous.html">
                         Contactez-nous
                     </a>
                 </li>
