--- a/src/contactez-nous.html
+++ b/src/contactez-nous.html
@@ -5,19 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link href="../assets/css/variables.css" rel="stylesheet"/>
-<link rel="stylesheet" href="../assets/css/ratings.css" />
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
-<link
-    href="https://fonts.googleapis.com/css?family=Red+Hat+Text:400,500&display=swap"
-    rel="stylesheet"
-/>
 <link rel="preconnect" href="https://fonts.gstatic.com" />
-<link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
-    rel="stylesheet"
-/>
 <link rel="stylesheet" href="../assets/css/style.css" />
 <link rel="stylesheet" href="../assets/css/contactez-nous.css">
 <title>Document</title>
@@ -47,8 +35,6 @@
         alt="wild code school project wild coin"
         />
     </a>
-        
-        <!-- <a class="coin" href="index.html">wildcoin</a> -->
     </div>
     <nav class="nav-menu" id="nav-menu">
         <ul class="nav-slider">
@@ -69,6 +55,22 @@
     </div>
 </header>
 
+<form action="/ma-page-de-traitement" method="post">
+    <h2>Contactez-nous</h2>
+    <div class="complet">
+        <label for="name">Nom :</label>
+        <input type="text" id="name" name="user_name">
+    </div>
+    <div class="complet">
+        <label for="mail">e-mail :</label>
+        <input type="email" id="mail" name="user_mail">
+    </div>
+    <div class="complet">
+        <label for="msg">Message :</label>
+        <textarea id="msg" name="user_message"></textarea>
+    </div>
+    <button class="button">Envoyer</button>
+</form>
 
 <footer>
     <div class="footer-content">
@@ -95,7 +97,6 @@
     </div>
     </div>
 </footer>
-<script src="../assets/js/app.js"></script>
 <script src="../assets/js/script.js"></script>
 <script
     src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
