Navbar and footer heigth have been fixed

--- a/src/team.html
+++ b/src/team.html
@@ -106,6 +106,7 @@
         <script src="../assets/js/items.js"></script>
         <script src="../assets/js/team.js"></script>
         <script src="../assets/js/script.js"></script>
+        <script src="../assets/js/darkmode.js"></script>
       </body>
     </div><!-- #body-container -->
 
