Added article link and multi Fix

--- a/src/team.html
+++ b/src/team.html
@@ -43,6 +43,9 @@
             <a href="../index.html">Accueil</a>
           </li>
           <li class="nav-slider-item">
+            <a href="./articles.html">Articles</a>
+          </li>
+          <li class="nav-slider-item">
             <a href="ratings.html">Cours</a>
           </li>
           <li class="nav-slider-item">
