--- a/src/articles.html
+++ b/src/articles.html
@@ -50,6 +50,9 @@
             <a href="../index.html">Accueil</a>
           </li>
           <li class="nav-slider-item">
+            <a href="./articles.html">Articles</a>
+          </li>
+          <li class="nav-slider-item">
             <a href="ratings.html">Cours</a>
           </li>
           <li class="nav-slider-item">
@@ -270,8 +273,7 @@
               <li><a href="#">Bitcoin: Fongibilité, Coinjoin et Lightning network</a></li>
           </ul>
         </div>
-        <div></div>
-        <div></div>
+       
     </div>
 
 
