--- a/src/contactez-nous.html
+++ b/src/contactez-nous.html
@@ -42,6 +42,9 @@
             <a href="../index.html">Accueil</a>
         </li>
         <li class="nav-slider-item">
+            <a href="./articles.html">Articles</a>
+          </li>
+        <li class="nav-slider-item">
             <a href="ratings.html">Cours</a>
         </li>
         <li class="nav-slider-item">
