Added article link on index.html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <a href="index.html">Accueil</a>
               </li>
               <li class="nav-slider-item">
+                <a href="./articles.html">Articles</a>
+              </li>
+              <li class="nav-slider-item">
                 <a href="src/ratings.html">Cours</a>
               </li>
               <li class="nav-slider-item">
