--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="index.html">Accueil</a>
               </li>
               <li class="nav-slider-item">
-                <a href="./articles.html">Articles</a>
+                <a href="./src/articles.html">Articles</a>
               </li>
               <li class="nav-slider-item">
                 <a href="src/ratings.html">Cours</a>
