added script.js on articles.html

--- a/src/articles.html
+++ b/src/articles.html
@@ -315,6 +315,7 @@
 
 <script src="../assets/js/articles.js"></script>
 <script src="../assets/js/darkmode.js"></script>
+<script src="../assets/js/script.js"></script>
 
 </body>
 </html>
