--- a/src/contactez-nous.html
+++ b/src/contactez-nous.html
@@ -57,8 +57,8 @@
     </nav>
     </div>
 </header>
-
-<form action="/ma-page-de-traitement" method="post">
+<div id="contact-form-card">
+<form >
     <h2>Contactez-nous</h2>
     <div class="complet">
         <label for="name">Nom :</label>
@@ -72,9 +72,9 @@
         <label for="msg">Message :</label>
         <textarea id="msg" name="user_message"></textarea>
     </div>
-    <button class="button">Envoyer</button>
+    <button class="button" id="button">Envoyer</button>
 </form>
-
+</div>
 <footer>
     <div class="footer-content">
         <ul class="footer-contact"> 
