--- a/src/contactez-nous.html
+++ b/src/contactez-nous.html
@@ -106,5 +106,6 @@
     data-auto-replace-svg="nest"
 ></script>
 <script src="../assets/js/darkmode.js"></script>
+<script src="../assets/js/contact.js"></script>
 </body>
 </html>
