--- a/src/ratings.html
+++ b/src/ratings.html
@@ -183,7 +183,7 @@
 
     <div class="filters">
       <div class="currencyChoose">
-        <label for="select-currency">Choose a currency:</label>
+        <label for="select-currency">Devise:</label>
         <select name="select-currency" id="select-currency">
           <option value="EUR">EUR</option>
           <option value="USD">USD</option>
@@ -192,7 +192,7 @@
       </div>
 
       <div class="cryptoChoixe">
-        <label for="select-crypto">Choose a crypto:</label>
+        <label for="select-crypto">Crypto:</label>
         <select name="select-crypto" id="select-crypto">
           <option value="BTC">BTC</option>
           <option value="ETH">ETH</option>
