--- a/src/contactez-nous.html
+++ b/src/contactez-nous.html
@@ -60,15 +60,15 @@
 <div id="contact-form-card">
 <form >
     <h2>Contactez-nous</h2>
-    <div class="complet">
+    <div id="name-cont" class="complet">
         <label for="name">Nom :</label>
         <input type="text" id="name" name="user_name">
     </div>
-    <div class="complet">
+    <div id="mail-cont" class="complet">
         <label for="mail">e-mail :</label>
         <input type="email" id="mail" name="user_mail">
     </div>
-    <div class="complet">
+    <div id="msg-cont" class="complet">
         <label for="msg">Message :</label>
         <textarea id="msg" name="user_message"></textarea>
     </div>
