change contactez-nous.html to contact.html.Change links in footers

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="footer-content">
             <ul class="footer-contact">
                 <li class="footer-contact-item">
-                    <a href="src/contactez-nous.html">
+                    <a href="src/contact.html">
                         Contactez-nous
                     </a>
                 </li>
