--- a/src/contact.html
+++ b/src/contact.html
@@ -7,8 +7,8 @@
 <link href="../assets/css/variables.css" rel="stylesheet"/>
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="../assets/css/style.css" />
-<link rel="stylesheet" href="../assets/css/contactez-nous.css">
-<title>Document</title>
+<link rel="stylesheet" href="../assets/css/contact.css">
+<title>WildCoin:contact</title>
 </head>
 
 <body>
@@ -79,7 +79,7 @@
     <div class="footer-content">
         <ul class="footer-contact"> 
             <li class="footer-contact-item">
-                <a href="../src/contactez-nous.html">
+                <a href="../src/contact.html">
                 Contactez-nous
                 </a>
             </li>
@@ -100,12 +100,13 @@
     </div>
     </div>
 </footer>
-<script src="../assets/js/script.js"></script>
 <script
     src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
     data-auto-replace-svg="nest"
 ></script>
+<script src="../assets/js/script.js"></script>
 <script src="../assets/js/darkmode.js"></script>
 <script src="../assets/js/contact.js"></script>
+
 </body>
 </html>
