--- a/src/team.html
+++ b/src/team.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WildCoin</title>
+    <title>WildCoin:team</title>
     <link href="../assets/css/variables.css" rel="stylesheet"/>
     <link href="../assets/css/team.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/style.css" />
@@ -83,7 +83,7 @@
             <div class="footer-content">
                 <ul class="footer-contact"> 
                     <li class="footer-contact-item">
-                        <a href="../src/contactez-nous.html">
+                        <a href="../src/contact.html">
                           Contactez-nous
                         </a>
                     </li>
