--- a/src/articles.html
+++ b/src/articles.html
@@ -287,7 +287,7 @@
         <div class="footer-content">
             <ul class="footer-contact">
                 <li class="footer-contact-item">
-                    <a href="./contactez-nous.html">
+                    <a href="./contact.html">
                         Contactez-nous
                     </a>
                 </li>
