--- a/src/ratings.html
+++ b/src/ratings.html
@@ -208,7 +208,7 @@
       <div class="footer-content">
         <ul class="footer-contact">
           <li class="footer-contact-item">
-            <a href="../src/contactez.html"> Contactez-nous </a>
+            <a href="../src/contact.html"> Contactez-nous </a>
           </li>
         </ul>
       </div>
