--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <label class="theme-switch" for="checkbox">
                 <input id="checkbox" type="checkbox"/>
                 <span class="slider round">
-              <img alt="" id="moon" src="assets/img/307307.svg">
-              <img alt="" id="sun" src="assets/img/sun--v2.png">
+              <img alt="" id="moon" src="assets/img/moon.svg">
+              <img alt="" id="sun" src="assets/img/sun.png">
             </span>
             </label>
         </div>
@@ -37,7 +37,7 @@
                     <img
                             alt="wild code school project wild coin"
                             class="logo"
-                            src="assets/img/Copie_de_logo-white-transparentback_1.png"
+                            src="assets/img/WCS-logo-transparent.png"
                     />
                 </a>
 
@@ -86,7 +86,7 @@
 
                 <div class="article__access flex">
                     <img alt="An image with the word Blockchain written in the middle" class="article__img"
-                         src="assets/img/blockchain.webp" width="64">
+                         src="assets/img/articles/thumbnails/blockchain.webp" width="64">
                     <p class="article__description small">
                         Naturally, the first person to ever give an answer to the question
                         “What is blockchain?” was Satoshi Nakamoto,
@@ -150,7 +150,6 @@
     <!--    <script src="assets/js/carousel/carousel.homepage.js"></script>-->
     <script src="assets/js/carousel.homepage.js"></script>
     <script src="assets/js/shortcuts.homepage.js"></script>
-    <script src="assets/js/modal.js"></script>
     <script
             data-auto-replace-svg="nest"
             src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
