--- a/src/ratings.html
+++ b/src/ratings.html
@@ -31,8 +31,8 @@
         <label class="theme-switch" for="checkbox">
           <input type="checkbox" id="checkbox" />
           <span class="slider round">
-            <img id="moon" src="../assets/img/307307.svg" alt="" />
-            <img id="sun" src="../assets/img/sun--v2.png" alt="" />
+            <img id="moon" src="../assets/img/moon.svg" alt="" />
+            <img id="sun" src="../assets/img/sun.png" alt="" />
           </span>
         </label>
       </div>
@@ -41,7 +41,7 @@
           <a href="../index.html">
             <img
               class="logo"
-              src="../assets/img/Copie_de_logo-white-transparentback_1.png"
+              src="../assets/img/WCS-logo-transparent.png"
               alt="wild code school project wild coin"
             />
           </a>
@@ -139,7 +139,7 @@
           <card class="asset-info">
             <div class="title">
               <img
-                src="../assets/img/12-122739_xrp-logo-png-clipart.png"
+                src="../assets/img/logo-xrp.png"
                 width="10%"
               />
               <h1>XRP</h1>
@@ -153,7 +153,7 @@
         <bnb class="bnb">
           <card class="asset-info">
             <div class="title">
-              <img src="../assets/img/téléchargement.png" width="10%" />
+              <img src="../assets/img/bnb.png" width="10%" />
               <h1>BNB</h1>
             </div>
             <div class="details">
