--- a/src/team.html
+++ b/src/team.html
@@ -20,8 +20,8 @@
       <label class="theme-switch" for="checkbox">
         <input type="checkbox" id="checkbox" />
         <span class="slider round">
-          <img id="moon" src="../assets/img/307307.svg" alt="">
-          <img id="sun" src="../assets/img/sun--v2.png" alt="">
+          <img id="moon" src="../assets/img/moon.svg" alt="">
+          <img id="sun" src="../assets/img/sun.png" alt="">
         </span>
       </label>
     </div>
@@ -30,7 +30,7 @@
         <a href="../index.html">
           <img
           class="logo"
-          src="../assets/img/Copie_de_logo-white-transparentback_1.png"
+          src="../assets/img/WCS-logo-transparent.png"
           alt="wild code school project wild coin"
         />
       </a>
