--- a/src/ratings.html
+++ b/src/ratings.html
@@ -69,8 +69,8 @@
         </nav>
       </div>
     </header>
-    <div class="container" >
-      <cards class="cards" id="cards-1">
+    <container class="container">
+      <cards class="cards">
         <bitcoin class="btc">
           <card class="asset-info">
             <div class="title">
@@ -163,11 +163,11 @@
           <canvas id="bnbChart"></canvas>
         </bnb>
       </cards>
-    </div>
+    </container>
 
     <div id="tableauSurvey" class="tableauSurvey">
-      <div  class="container_2">
-        <cards id="tableauBorder" id="cards-1" class="cards">
+      <container class="container_2">
+        <cards id="tableauBorder" class="cards">
           <myChart class="myChart">
             <card class="asset-info">
               <div class="title"></div>
@@ -178,7 +178,7 @@
             <canvas id="myChart"></canvas>
           </myChart>
         </cards>
-      </div>
+      </container>
     </div>
 
     <div class="filters">
