link with articles page has been fixed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a href="index.html">Accueil</a>
                     </li>
                     <li class="nav-slider-item">
-                        <a href="/src/articles.html">Articles</a>
+                        <a href="src/articles.html">Articles</a>
                     </li>
                     <li class="nav-slider-item">
                         <a href="src/ratings.html">Cours</a>
