Add table to homepage

--- a/src/ratings.html
+++ b/src/ratings.html
@@ -139,7 +139,7 @@
           <card class="asset-info">
             <div class="title">
               <img
-                src="../assets/img/logo-xrp.png"
+                src="../assets/img/logos/xrp.png"
                 width="10%"
               />
               <h1>XRP</h1>
@@ -153,7 +153,7 @@
         <bnb class="bnb">
           <card class="asset-info">
             <div class="title">
-              <img src="../assets/img/bnb.png" width="10%" />
+              <img src="../assets/img/logos/bnb.png" width="10%" />
               <h1>BNB</h1>
             </div>
             <div class="details">
