--- a/src/tableau.html
+++ b/src/tableau.html
@@ -2,69 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/tableau.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="../assets/css/tableau.css" rel="stylesheet">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>WildCoin</title>
 </head>
 <body>
-    
-
-
-  <div class="tableau-grid">
-
-
-
-
-    <div class="title">ETH
-        <img src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/btc.svg" alt="">
-    </div>
-    <div class="title">XRP
-        <img src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/atm.svg" alt="">
-    </div>
-    <div class="title">ATOM
-        <img src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/eth.svg" alt="">
-    </div>
-    <div class="title">BTC
-        <img src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/ltc.svg" alt="">
-    </div>
-    <div class="title">LTC
-        <img src="http://127.0.0.1:5500/assets/img/12-122739_xrp-logo-png-clipart.png" alt="">
-    </div>
-    <div class="title">BNB
-        <img src="http://127.0.0.1:5500/assets/img/t%C3%A9l%C3%A9chargement.png" alt="">
-    </div>
-   
-
-
-   
-   <div id="ethPrice"></div>
-   <div id="xrpPrice"></div>
-   <div id="atomPrice"></div>
-   <div id="btcPrice"></div>
-   <div id="ltcPrice"></div>
-   <div id="bnbPrice"></div>
-
-   
-
-
-
-  
-   <div class="filters">
-    <div class="currencyChoose">
-        <label for="select-currency">Choose a currency:</label>
-        <select name="select-currency" id="select-currency">
-        <option value="EUR">EUR</option>
-        <option value="USD">USD</option>
-        <option value="JPY">JPY</option>
-        </select>
+    <div class="tableau-grid">
+        <div class="title">ETH
+            <img alt="" src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/btc.svg">
         </div>
-  
-  </div>
+        <div class="title">XRP
+            <img alt="" src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/atm.svg">
+        </div>
+        <div class="title">ATOM
+            <img alt="" src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/eth.svg">
+        </div>
+        <div class="title">BTC
+            <img alt="" src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/ltc.svg">
+        </div>
+        <div class="title">LTC
+            <img alt="" src="http://127.0.0.1:5500/assets/img/12-122739_xrp-logo-png-clipart.png">
+        </div>
+        <div class="title">BNB
+            <img alt="" src="http://127.0.0.1:5500/assets/img/t%C3%A9l%C3%A9chargement.png">
+        </div>
 
-    <script src="../assets/js/tableau.js"></script>
-  
+        <div id="ethPrice"></div>
+        <div id="xrpPrice"></div>
+        <div id="atomPrice"></div>
+        <div id="btcPrice"></div>
+        <div id="ltcPrice"></div>
+        <div id="bnbPrice"></div>
+
+        <div class="filters">
+            <div class="currencyChoose">
+                <label for="select-currency">Choose a currency:</label>
+                <select id="select-currency" name="select-currency">
+                    <option value="EUR">EUR</option>
+                    <option value="USD">USD</option>
+                    <option value="JPY">JPY</option>
+                </select>
+            </div>
+        </div>
+        <script src="../assets/js/tableau.js"></script>
 </body>
 </html>
